# music_chair_game

./: CMakeLists.txt  README.md
include/: Chair.h  Game.h  GameObject.h  GameObjectFactory.h  NPC.h  Player.h  PlayerController.h  README.md
resources/: README.md
src/: Chair.cpp  Game.cpp  GameObject.cpp  GameObjectFactory.cpp  NPC.cpp  Player.cpp  PlayerController.cpp  README.md  explain.txt  main.cpp
